test_cases/tests/axum/not_async.stderr
error: Handlers must be `async fn`s
 --> tests/axum/not_async.rs:4:1
  |
4 | fn handler() {}
  | ^^
